--- a/css/styles.css
+++ b/css/styles.css
@@ -701,20 +701,24 @@ border-bottom: 1px solid var(--border-head-color);
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal{
+.modal-container{
     position: absolute;
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding:40px;
     width: 100%;
     max-width: 528px;
     height: 100%;
     max-height: 581px;                                          
     background-color: var(--white-color);
-
+    overflow-y: auto;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+.modal{
+    padding:20px 0;
 }
 .backdrop.is-hidden .modal{
     transform: translate(-50%, -50%) scale(0.9);
@@ -738,4 +742,118 @@ border-bottom: 1px solid var(--border-head-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--white-color);
     fill: var(--icon-close-color);
+}
+
+.modal-title{
+    text-align: center;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+}
+
+
+
+.subscription-box{
+    padding-left:93px;
+
+}
+
+
+.subscription-box .text{
+   margin-bottom:20px;
+}
+
+/*Form*/
+
+.form-fild-label{
+    color:var(--primary-text-color);
+    margin-bottom:4px:
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+}
+
+.form-fild-input{
+    padding:0 12px 0 42px;
+    height:40px;
+    width:100%;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+}
+
+.form-fild-textarea{
+    padding: 12px 16px;
+    height: 120px;
+    width: 100%;
+    margin-bottom:20px; 
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+}
+
+
+.form-fild-input:focus {
+    border-color: var(--accent-color);
+}
+.form-fild-input:focus + .form-fild-icon {
+    fill:var(--accent-color);
+}
+.form-fild-textarea:focus {
+    border-color: var(--accent-color);
+}
+.form-fild-textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.form-fild{
+    position:relative;
+    margin-bottom:10px;
+}
+
+.form-fild-icon{
+    position:absolute;
+    top:50%;
+    left:12px;
+    transform: translateY(-50%);
+    
+}
+
+.form-label-checkbox{
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+}
+
+.checkbox-box{
+    margin-bottom:30px;
+}
+
+.form-submit {
+
+    display: inline-block;
+    padding: 10px 52px;
+    margin: 0;auto;
+    padding: 10px 24px;
+    display: inline-block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.87;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    border-color: var(--accent-color);
+    color: var(--white-color);
+    background-color: var(--accent-color);
 }
