--- a/css/styles.css
+++ b/css/styles.css
@@ -791,9 +791,10 @@ body {
 }
 
 .form-submit {
-  display: block;
+  display: flex;
   margin: 0 auto;
   align-items: center;
+  justify-content: center;
   text-align: center;
   letter-spacing: 0.06em;
 
@@ -805,6 +806,6 @@ body {
 
   border-color: var(--accent-color);
   color: var(--white-color);
-  background-color: var(--accent-color);
+  background: var(--accent-color);
   cursor: pointer;
 }
