--- a/css/styles.css
+++ b/css/styles.css
@@ -787,18 +787,19 @@ body {
 }
 
 .checkbox-box {
-  margin-bottom: 30px;
 }
 
 .form-submit {
   display: flex;
   margin: 0 auto;
+  margin-top: 30px;
+  padding: 10px 52px;
   align-items: center;
   justify-content: center;
   text-align: center;
-  letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
 
-  padding: 10px 52px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -808,4 +809,6 @@ body {
   color: var(--white-color);
   background: var(--accent-color);
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
