--- a/css/styles.css
+++ b/css/styles.css
@@ -660,10 +660,6 @@ body {
 }
 
 .modal-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 40px;
   width: 100%;
   max-width: 528px;
@@ -671,14 +667,19 @@ body {
   max-height: 581px;
   background-color: var(--white-color);
   overflow-y: auto;
-  transform: translate(-50%, -50%) scale(1);
+  transform: scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 20px 0;
+  height: 100%;
 }
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
+.backdrop.is-hidden .modal-container {
+  transform: scale(0.9);
 }
 .backdrop.is-hidden {
   opacity: 0;
