--- a/css/styles.css
+++ b/css/styles.css
@@ -643,6 +643,63 @@ body {
   background: var(--accent-color);
 }
 
+.subscription-form {
+  display: flex;
+  gap: 12px;
+}
+.subscription-box {
+  padding-left: 93px;
+}
+
+.subscription-button {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  padding: 10px 28px;
+  width: 200px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.subscription-icon {
+  fill: currentColor;
+}
+.subscription-text {
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+}
+.subscription-input {
+  padding: 15px 16px;
+  height: 50px;
+  width: 358px;
+  color: var(--white-color);
+  background-color: var(--hero-bg-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: none;
+}
+
+.subscription-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
 /* Modal*/
 
 .backdrop {
@@ -712,14 +769,6 @@ body {
   color: var(--title-text-color);
 }
 
-.subscription-box {
-  padding-left: 93px;
-}
-
-.subscription-box .text {
-  margin-bottom: 20px;
-}
-
 /*Form*/
 
 .form-fild-label {
@@ -787,7 +836,16 @@ body {
   letter-spacing: 0.03em;
 }
 
+.checkbox {
+  appearence: none;
+}
+
 .checkbox-box {
+}
+
+.checkbox-link {
+  color: var(--accent-color);
+  text-decoration-skip-ink: none;
 }
 
 .form-submit {
