--- a/css/styles.css
+++ b/css/styles.css
@@ -658,6 +658,7 @@ body {
   gap: 10px;
   padding: 10px 28px;
   width: 200px;
+  height: 50px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
