--- a/css/styles.css
+++ b/css/styles.css
@@ -832,16 +832,36 @@ body {
 }
 
 .form-label-checkbox {
+  position: relative;
+  padding-left: 24px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
 .checkbox {
-  appearence: none;
+}
+.checkbox-input {
+  appearance: none;
 }
 
-.checkbox-box {
+.checkbox-icon {
+  position: absolute;
+  margin-right: 4px 8px 0 0;
+  width: 16px;
+  height: 15px;
+  fill: transparent;
+  background-color: var(--white-color);
+  border: var(--title-text-color) solid 2px;
+  border-radius: 2px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-input:checked + .checkbox-icon {
+  fill: var(--white-color);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .checkbox-link {
