--- a/css/styles.css
+++ b/css/styles.css
@@ -667,6 +667,7 @@ body {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: none;
 }
 
 .subscription-icon {
@@ -690,6 +691,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+
   outline: none;
 }
 
@@ -839,15 +841,13 @@ body {
   letter-spacing: 0.03em;
 }
 
-.checkbox {
-}
 .checkbox-input {
   appearance: none;
 }
 
 .checkbox-icon {
   position: absolute;
-  margin-right: 4px 8px 0 0;
+  margin: 4px 8px 0 0;
   width: 16px;
   height: 15px;
   fill: transparent;
@@ -887,8 +887,13 @@ body {
 
   border-color: var(--accent-color);
   color: var(--white-color);
-  background: var(--accent-color);
+  background-color: var(--accent-bg-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-submit {
+  background: var(--accent-color);
 }
