--- a/css/styles.css
+++ b/css/styles.css
@@ -581,7 +581,9 @@ body {
   padding: 60px 0px;
   background-color: var(--hero-bg-color);
 }
-
+.section.footer.box {
+  padding: 0;
+}
 .address {
   padding-top: 28px;
 }
@@ -648,7 +650,7 @@ body {
   gap: 12px;
 }
 .subscription-box {
-  padding-left: 93px;
+  margin-left: auto;
 }
 
 .subscription-button {
@@ -691,7 +693,6 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-
   outline: none;
 }
 
@@ -726,7 +727,6 @@ body {
   height: 100%;
   max-height: 581px;
   background-color: var(--white-color);
-  overflow-y: auto;
   transform: scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -760,8 +760,12 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
   fill: var(--icon-close-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.btn-close:hover {
+  fill: var(--accent-color);
+}
 .modal-title {
   text-align: center;
   margin-bottom: 12px;
